
* 2.3.18 *

* Fix returning of auto-increment identity for TinyTDS driver. [Gregory McIntyre / puyo]


* 2.3.17 *

* Allow TinyTDS/DBLIB mode to pass down :host/:port config options.


* 2.3.16 *

* TinyTDS enhancements for lost connections. Default connection mode.


* 2.3.15 *

* Version bump due to bad 2.3.14 release.


* 2.3.14 *

* Flatten sp_helpconstraint when looking for constraints just in case fks are present. Issue #64.

* Properly quote table names when reflecting on views.

* Add "dead or not enabled" to :dblib's lost connection messages.


* 2.3.13 *

* Fixed native database type memoization, now at connection instance level. Fix #execute_procedure for :dblib mode to return indifferent access rows too. Misc test case fixes for 2000 & 2005 need for using coerced Time vs Date type. Fix SQL Server 2000's lack of using TinyTds' native affected rows for UPDATE statements, revert to raw SQL. 

* Make login timeout and query timeout backward database.yml friendly for :dblib mode.


* 2.3.12 *

* Add multiple results set support with #execute_procedure for :dblib mode. [Ken Collins]

* Allow unicode conditions strings to be quoted correctly. Like 3.0 branch. [Ken Collins]

* Simplify encoding support. [Ken Collins]

* Add binary timestamp datatype handling. [Erik Bryn]


* 2.3.11

* Add TinyTds/dblib connection mode. [Ken Collins]


* 2.3.10

* Fix DSN'less code. [Erik Bryn]


* 2.3.9

* Support DSN'less connections. Resolves ticket 38. 

* Support upcoming ruby odbc 0.99992

* Include new raw connection interfaces developed and optimized under the 3.0 branch.

* The remove_column conforms to ArgumentError exceptions. [Ken Collins]

* Add support for default function values in schema reflection. Allows for uniqueidentifier default 
values like NEWID(). These are not automatically inserted into the INSERT statement as of yet, that 
could be done user side on a before save callback now. Includes new #newid_function and 